Fixes modal shifting the page (#753)

--- a/src/main/resources/static/scss/components/_navbar.scss
+++ b/src/main/resources/static/scss/components/_navbar.scss
@@ -78,6 +78,7 @@
 }
 
 .navbar {
+    width: 100vw;
     background-color: white;
     padding-top: 0;
     padding-bottom: 0;
