--- a/src/main/resources/static/scss/sections/_home.scss
+++ b/src/main/resources/static/scss/sections/_home.scss
@@ -11,6 +11,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 
     h1 { /* For the Role: and Welcome *name* */
         color: $uh-black;
